# deim

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  filtered_df.csv  main.py  pyproject.toml  words_df.csv
.atl/: .skill-registry.cache.json  skill-registry.md
app/: page.py  runnner.py
app/components/: extracted_sections.py  input_pdf.py  message_box.py  primary_button.py  results_table.py  summary_counters.py
scripts/: debug.py
services/: dian_vs_platform.py  pdf_handler.py
services/pdf_dian/: extractor.py
services/pdf_platform/: __init__.py  chunk.py  extractor.py  summary.py
tests/: test_dian_vs_platform.py  test_pdf_dian_extractor.py
