[project]
name = "deim"
version = "0.1.0"
description = "DEIM Streamlit monolith MVP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.44.0",
    "pymupdf>=1.26.0",
    "polars>=1.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
